@@ -9,6 +9,7 @@ import java.util.List;
 import java.util.Objects;
 import nl.tudelft.sem.template.controllers.UserController;
 import nl.tudelft.sem.template.services.UserService;
+import nl.tudelft.sem.template.services.UserTimeSlotService;
 import nl.tudelft.sem.template.shared.domain.Node;
 import nl.tudelft.sem.template.shared.domain.Position;
 import nl.tudelft.sem.template.shared.domain.TimeSlot;
@@ -19,7 +20,6 @@ import nl.tudelft.sem.template.shared.enums.Day;
 import nl.tudelft.sem.template.shared.enums.PositionName;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.data.util.Pair;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
@@ -61,23 +61,24 @@ public class UserControllerTest {
     public void setup() {
         this.repo = new TestUserRepository();
         this.service = new UserService(repo);
-        this.sut = new UserController(service);
+        UserTimeSlotService timeService = new UserTimeSlotService(repo, service);
+        this.sut = new UserController(service, timeService);
     }
 
     @Test
     public void testGetAll() {
         sut.registerNewUser(getUser("a", Certificate.B5));
-        assertEquals(sut.getUsers().size(), 1);
+        assertEquals(1, sut.getUsers().size());
         sut.registerNewUser(getUser("B", Certificate.B2));
-        assertEquals(sut.getUsers().size(), 2);
+        assertEquals(2, sut.getUsers().size());
     }
 
     @Test
     public void testAddUser() {
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
-        assertEquals(sut.getUsers().size(), 1);
-        assertEquals(sut.getUsers().get(0), u);
+        assertEquals(1, sut.getUsers().size());
+        assertEquals(u, sut.getUsers().get(0));
     }
 
     @Test
@@ -85,8 +86,8 @@ public class UserControllerTest {
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
         sut.updateUser(1L, new UserModel("bbb", "Bobs", "MALE",  Certificate.B2, new ArrayList<>()));
-        assertEquals(sut.getUsers().get(1).getName(), "bbb");
-        assertEquals(sut.getUsers().get(0).getCertificate(), Certificate.B2);
+        assertEquals("bbb", sut.getUsers().get(1).getUserInfo().getName());
+        assertEquals(Certificate.B2, sut.getUsers().get(0).getUserInfo().getCertificate());
     }
 
     @Test
@@ -96,48 +97,37 @@ public class UserControllerTest {
         User u1 = getUser("Bob", Certificate.B6);
         sut.registerNewUser(u1);
         sut.deleteUser(1L);
-        assertEquals(sut.getUsers().size(), 1);
-        assertEquals(sut.getUser(2L).getBody(), u1);
+        assertEquals(1, sut.getUsers().size());
+        assertEquals(u1, sut.getUser(2L).getBody());
     }
 
     @Test
     public void testUpdateNonExistent() {
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
-        assertEquals(sut.updateUser(2L, new UserModel("bbb", "Bob", "MALE",
-                Certificate.B1, new ArrayList<>())), ResponseEntity.badRequest().build());
-        assertEquals(sut.getUsers().get(0).getName(), "A");
+        assertEquals(ResponseEntity.badRequest().build(), sut.updateUser(2L,
+                new UserModel("bbb", "Bob", "MALE", Certificate.B1, new ArrayList<>())));
+        assertEquals(sut.getUsers().get(0).getUserInfo().getName(), "A");
     }
-
-    //TODO: fix the tests
-
-    /*@Test
-    public void testAddSchedule() {
-        User u = getUser("A", Certificate.B1);
-        sut.registerNewUser(u);
-        //assertEquals(sut.addRecurringTimeSlot().getStatusCode(), HttpStatus.OK);
-        assertEquals(u.getId(), 1L);
-        assertEquals(sut.getUser(1L).getBody(), u);
-        assertEquals(sut.getUser(1L).getBody().getSchedule().getRecurringSlots().get(0),
-                new TimeSlot(-1, Day.MONDAY, new Node(10, 14)));
-        assertEquals(sut.getUser(1L).getBody().getSchedule().getAddedSlots().size(), 0);
-        assertEquals(sut.getUser(1L).getBody().getSchedule().getRemovedSlots().size(), 0);
-    }*/
 
     @Test
     public void testRemoveSchedule() {
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
-        //assertEquals(sut.addRecurringTimeSlot(1L, Day.MONDAY, new Node(10, 14)).getStatusCode(), HttpStatus.OK);
-        //assertEquals(sut.removeRecurringTimeSlot(1L, Day.MONDAY, new Node(10, 14)).getStatusCode(), HttpStatus.OK);
+        assertEquals(sut.addRecurringTimeSlot(1L, new TimeSlot(1, Day.MONDAY, new Node(10, 14))).getStatusCode(),
+            HttpStatus.OK);
+        assertEquals(sut.removeRecurringTimeSlot(1L, new TimeSlot(1, Day.MONDAY, new Node(10, 14))).getStatusCode(),
+            HttpStatus.OK);
         assertEquals(sut.getUser(1L).getBody().getSchedule().getRecurringSlots().size(), 0);
     }
+
 
     @Test
     public void testFailedAddSchedule() {
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
-        //assertEquals(sut.addRecurringTimeSlot(2L, Day.MONDAY, new Node(10, 14)).getStatusCode(), HttpStatus.BAD_REQUEST);
+        assertEquals(sut.addRecurringTimeSlot(2L, new TimeSlot(1, Day.MONDAY, new Node(10, 9))).getStatusCode(),
+            HttpStatus.BAD_REQUEST);
 
     }
 
@@ -146,20 +136,20 @@ public class UserControllerTest {
         TimeSlot time = new TimeSlot(1, Day.FRIDAY, new Node(10, 12));
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
-        assertEquals(sut.addTimeSlot(1L, time).getStatusCode(), HttpStatus.OK);
+        assertEquals(HttpStatus.OK, sut.addTimeSlot(1L, time).getStatusCode());
         assertTrue(sut.getUser(1L).getBody().getSchedule().getAddedSlots().contains(time));
     }
 
     @Test
     public void testRemoveTimeSlot() {
-        final TimeSlot removedTime = new TimeSlot(1, Day.FRIDAY, new Node(11, 13));
-        final TimeSlot correctTime = new TimeSlot(1, Day.FRIDAY, new Node(11, 12));
+        final TimeSlot removedTime = new TimeSlot(-1, Day.FRIDAY, new Node(11, 13));
+        final TimeSlot correctTime = new TimeSlot(-1, Day.FRIDAY, new Node(11, 12));
 
         User u = getUser("A", Certificate.B1);
 
         sut.registerNewUser(u);
         sut.addRecurringTimeSlot(1L, correctTime);
-        assertEquals(sut.removeTimeSlot(1L, removedTime).getStatusCode(), HttpStatus.OK);
+        assertEquals(HttpStatus.OK, sut.removeTimeSlot(1L, removedTime).getStatusCode());
         assertTrue(Objects.requireNonNull(sut.getUser(1L).getBody()).getSchedule().getRemovedSlots().contains(correctTime));
     }
 
@@ -175,112 +165,45 @@ public class UserControllerTest {
 
     @Test
     public void testGetNotifications() {
-        List<String> notifications = new ArrayList<>(Arrays.asList("a", "b"));
-
         User u = getUser("A", Certificate.B1);
-        u.setNotifications(notifications);
+        u.addNotification("a");
+        u.addNotification("b");
         sut.registerNewUser(u);
+
+        List<String> notifications = new ArrayList<>(Arrays.asList("a", "b"));
         assertEquals(notifications, sut.getNotifications(1L).getBody());
     }
 
     @Test
     public void testGetNotificationsFail() {
-        assertEquals(sut.getNotifications(1L).getStatusCode(), HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void testSetName() {
-        User u = getUser("A", Certificate.B1);
-        sut.registerNewUser(u);
-        assertEquals(sut.setName(1L, "Bob").getStatusCode(), HttpStatus.OK);
-        assertEquals("Bob", sut.getUser(1L).getBody().getName());
-    }
-
-    @Test
-    public void testSetNameFail() {
-        assertEquals(sut.setName(2L, "Bob").getStatusCode(), HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void testSetOrganization() {
-        User u = getUser("A", Certificate.B1);
-        sut.registerNewUser(u);
-        assertEquals(sut.setOrganization(1L, "TU Delft").getStatusCode(), HttpStatus.OK);
-        assertEquals("TU Delft", sut.getUser(1L).getBody().getOrganization());
-    }
-
-    @Test
-    public void testSetOrganizationFail() {
-        assertEquals(sut.setOrganization(2L, "TU Delft").getStatusCode(), HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void testSetGender() {
-        User u = getUser("A", Certificate.B1);
-        sut.registerNewUser(u);
-        assertEquals(sut.setGender(1L, "Male").getStatusCode(), HttpStatus.OK);
-        assertEquals("Male", sut.getUser(1L).getBody().getGender());
-    }
-
-    @Test
-    public void testSetGenderFail() {
-        assertEquals(sut.setGender(2L, "Male").getStatusCode(), HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void testSetCertificate() {
-        User u = getUser("A", Certificate.B1);
-        sut.registerNewUser(u);
-        assertEquals(sut.setCertificate(1L, Certificate.B2).getStatusCode(), HttpStatus.OK);
-        assertEquals(Certificate.B2, sut.getUser(1L).getBody().getCertificate());
-    }
-
-    @Test
-    public void testSetCertificateFail() {
-        assertEquals(sut.setCertificate(2L, Certificate.B1).getStatusCode(), HttpStatus.BAD_REQUEST);
-    }
-
-    @Test
-    public void testSetPositions() {
-        List<Position> positions = getPositions();
-        positions.add(new Position(PositionName.Coach, true));
-
-        User u = getUser("A", Certificate.B1);
-        sut.registerNewUser(u);
-        assertEquals(sut.setPositions(1L, positions).getStatusCode(), HttpStatus.OK);
-        assertEquals(positions, sut.getUser(1L).getBody().getPositions());
-    }
-
-    @Test
-    public void testSetPositionsFail() {
-        assertEquals(sut.setPositions(2L, getPositions()).getStatusCode(), HttpStatus.BAD_REQUEST);
+        assertEquals(HttpStatus.BAD_REQUEST, sut.getNotifications(1L).getStatusCode());
     }
 
     @Test
     public void testAddNotifications() {
-        List<String> notifications = new ArrayList<>(Arrays.asList("A"));
+        List<String> notifications = new ArrayList<>(List.of("A"));
 
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
-        assertEquals(sut.addNotification(1L, "A").getStatusCode(), HttpStatus.OK);
+        assertEquals(HttpStatus.OK, sut.addNotification(1L, "A").getStatusCode());
         assertEquals(notifications, sut.getUser(1L).getBody().getNotifications());
     }
 
     @Test
     public void testAddNotificationsFail() {
-        assertEquals(sut.addNotification(2L, "A").getStatusCode(), HttpStatus.BAD_REQUEST);
+        assertEquals(HttpStatus.BAD_REQUEST, sut.addNotification(2L, "A").getStatusCode());
     }
 
     @Test
     public void testGetUserByNetId() {
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
-        assertEquals(sut.getUserByNetId("A").getStatusCode(), HttpStatus.OK);
+        assertEquals(HttpStatus.OK, sut.getUserByNetId("A").getStatusCode());
         assertEquals(u, sut.getUserByNetId("A").getBody());
     }
 
     @Test
     public void testGetUserByNetIdNotFound() {
-        assertEquals(sut.getUserByNetId("A").getStatusCode(), HttpStatus.NOT_FOUND);
+        assertEquals(HttpStatus.NOT_FOUND, sut.getUserByNetId("A").getStatusCode());
     }
 }
